--- a/docs/wip_graph/notebooks/02_learning_reachability.ipynb
+++ b/docs/wip_graph/notebooks/02_learning_reachability.ipynb
@@ -3250,12 +3250,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "255 of 3022 graphs not solved\n"
+     ]
+    }
+   ],
    "source": [
     "# Evaluating errors.\n",
-    "ocl_correct_r, ocl_incorret_r = ocl_r.correct_incorrect_graph_evaluators\n",
+    "ocl_correct_r, ocl_incorrect_r = ocl_r.correct_incorrect_graph_evaluators\n",
     "\n",
     "print(f'{len(ocl_incorrect_r.specs)} of {len(ocl_r.specs)} graphs not solved')"
    ]
