--- a/docs/wip_graph/notebooks/02_learning_reachability.ipynb
+++ b/docs/wip_graph/notebooks/02_learning_reachability.ipynb
@@ -2032,9 +2032,9 @@
     "    return max(s.graph.number_of_edges() for s in specs)\n",
     "\n",
     "num_processing_steps_tr = GetNumberOfMessagePassingSteps(specs_tr)\n",
-    "# TODO: We haven't generated evaluation graphs yet, so we calculate the\n",
-    "# number of message passing steps from the training graphs.\n",
-    "num_processing_steps_ge = GetNumberOfMessagePassingSteps(specs_tr)\n",
+    "# TODO: We haven't generated evaluation graphs yet, so we use the same\n",
+    "# number of message passing steps as we do for training.\n",
+    "num_processing_steps_ge = num_processing_steps_tr\n",
     "\n",
     "print(f'{num_processing_steps_tr} message passing steps for training')\n",
     "print(f'{num_processing_steps_ge} message passing steps for evaluation')\n",
