Update class name.

--- a/docs/wip_graph/notebooks/01_deeptune_adversary.ipynb
+++ b/docs/wip_graph/notebooks/01_deeptune_adversary.ipynb
@@ -1877,7 +1877,7 @@
     }
    ],
    "source": [
-    "results = heterogeneous_mapping.ExperimentalResults(\n",
+    "results = heterogeneous_mapping.HeterogeneousMappingExperiment(\n",
     "    '/tmp/deeplearning/deeptune/opencl/notebooks/adversary')\n",
     "results.dataset.df"
    ]
