--- a/docs/cv/sec/professional_experience.tex
+++ b/docs/cv/sec/professional_experience.tex
@@ -4,7 +4,7 @@
 
 \Description{%
 % Date range.
-\MarginText{2018\\*\textit{(current)}}%
+\MarginText{2018}%
 % Company.
 \textbf{DeepMind}, London, UK
 \newline%
@@ -12,7 +12,7 @@
 Software Engineer Intern
 \vspace{.5em}\\ \noindent
 % Description.
-Investigating deep reinforcement learning for optimizing instruction fusion of TensorFlow XLA graphs. Black-box learning methods for TPU, GPU, and CPU performance.%
+Deep reinforcement learning for optimizing instruction fusion of TensorFlow XLA program graphs. Black-box learning methods for TPU, GPU, and CPU performance.%
 }
 
 \Description{%
